manifests/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: argocd
spec:
  ports:
    - name: http
      port: 11434
      targetPort: 11434
  selector:
    app: ollama
