manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: argocd
spec:
  rules:
    - host: www.my-code-chat-bot.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ollama-webui-service
                port:
                  number: 80
  ingressClassName: nginx
